@@ -32,6 +32,7 @@ Bug fixes
  * Wagtail's compiled static assets are now put into the correct directory on Windows (Aarni Koskela)
  * ``ChooserBlock`` now correctly handles models with primary keys other than ``id`` (alexpilot11)
  * Fixed typo in Wistia oEmbed pattern (Josh Hurd)
+ * Added more accurate help text for the Administrator flag on user accounts (Matt Fozard)
 
 
 Upgrade considerations
